--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "typescript": "^1.8.2"
   },
   "devDependencies": {
-    "grunt": "^1.0.3",
+    "braces": ">=2.3.1",
+    "grunt": "^1.3.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-typescript": "^0.8.0",
-    "js-yaml": ">=3.13.1",
-    "braces": ">=2.3.1"
+    "js-yaml": ">=3.13.1"
   }
 }
